# Software-System-Traning

./: .gitignore  .project  Cargo.toml  Component.puml  Database_Data_Model.puml  High_level.puml  README.md  Untitled Document 1
.cargo/: config.toml
benches/: benchmark.rs  benchmark_main.rs
class-high-level/: README.md  src.puml
component/: src.puml
configurations/: reference.yml
deliverables/: RustGenerator.xtend  XRayDSL.xtext  Xray.xdsl
examples/example1/: spec1.xdsl
examples/example1/src-gen/: Cargo.toml  main.rs
examples/example2/: spec2.xdsl
examples/example2/dir/: file3.txt  file4.txt
examples/example2/src-gen/: main.rs
examples/example3(Alerted by Validator)/: spec3.xdsl
examples/example4(Alerted by Validator)/: spec4.xdsl
one_plane/: .project  1plane.ysc
runner/: Cargo.toml
runner/src/: main.rs
sequence-config/: src.puml
sequence-pedal-1/: src.puml
sequence-pedal-2/: alternative-src.puml  src.puml
src/: lib.rs  main.rs  search.rs  test.rs
src/config/: run.rs
src/datastructure/bvh/: boundingbox.rs  mod.rs  node.rs
src/generator/: basic.rs  mod.rs  threaded.rs
src/raytracer/: mod.rs  mstracer.rs
src/renderer/: builder.rs  mod.rs
src/scene/: scene.rs  triangle.rs
src/scene/texture/: mod.rs
src/shader/: mcshader.rs  mod.rs
src/util/: mod.rs  outputbuffer.rs  vector.rs
two_plane/: 2plane.ysc
uart/: Cargo.toml
uart/src/: buffer.rs  data_format.rs  main.rs  once_cell.rs  own_mutex.rs  test.rs  uart_driver.rs
xray/src/xray/: GenerateXRayDSL.mwe2  XRayDSLRuntimeModule.xtend  XRayDSLStandaloneSetup.xtend
(+12 files in other folders)
