cargo-features = ["per-package-target"]


[package]
name = "runner"
version = "0.1.0"
edition = "2021"
forced-target = "x86_64-unknown-linux-gnu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tudelft-arm-qemu-runner = "0.1.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
postcard = "1.0.2"
heapless = "0.7.16"